[package]
name = "bevy_jobs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[features]
tokio = ["dep:tokio"]

[dependencies]
async-channel = "1"
bevy_app = "0.13"
bevy_ecs = "0.13"
bevy_tasks = { version = "0.13", features = ["multi-threaded"] }
bevy_log = "0.13"
web-time = "1.0"

tokio = { version = "1", features = ["rt", "sync"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
