[workspace]
resolver = "2"
members = ["bevy_jobs", "bevy_job_fetch"]

[workspace.package]
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
license = "MIT/Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unimplemented = "warn"
indexing_slicing = "warn"
cast_lossless = "warn"

[workspace.dependencies]
async-channel = "2"
bevy_app = "0.16"
bevy_ecs = "0.16"
bevy_jobs = { path = "./bevy_jobs" }
bevy_log = "0.16"
bevy_tasks = { version = "0.16", features = ["multi_threaded"] }
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
web-time = "1.0"
