[package]
name = "bevy_job_fetch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
bevy_jobs = { workspace = true, features = ["tokio"] }
