[package]
name = "bevy_jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
tokio = ["dep:tokio", "dep:tokio_with_wasm"]

[dependencies]
async-channel = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_tasks = { workspace = true }
bevy_log = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { version = "0.8", features = ["rt"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
